# kairos-tau-study

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/: airline_success_workflows.json  anti_patterns.json  labeled_alerts.jsonl  pattern_catalog_v0.json
docs/live-pipeline/: DIRECTION.md  README.md  raw_batch_analysis.json
results/: RESULTS.md  ab_runA_full.json  ab_runB_full.json  ab_summary.json  ablation_summary.json  analysis_output.json  first_divergence.json  llm_step_judge_gpt4omini.json  llm_step_judge_sonnet.json
scripts/: ab_measure.py  analyze.py  first_divergence.py  llm_step_judge.py  run_ablation.py
src/kairos/: __init__.py  config.py  log.py
src/kairos/diagnostic/: __init__.py  catalog.py  labeler.py
src/kairos/host/: __init__.py  _orchestrator.py  id_extract.py  run_dir.py  sinks.py
src/kairos/intercept/: __init__.py  engine.py  gates.py  sinks.py
src/kairos/models/: __init__.py  enums.py  semantic_recovery.py  trace.py
src/kairos/runtime_correction/: __init__.py  primitives.py
src/kairos/semantic_recovery/: __init__.py  breakers.py  correction.py  drift_detector.py  expectation.py  memory.py  plan.py  policy.py  progress_monitor.py  runtime.py  tool_policy.py  verifier.py
src/tau_harness/: __init__.py  benchmark.py  cascade_retriever.py  count_tasks.py  feature_flags.py  kairos_gates.py  kairos_setup.py  openai_agent.py  openai_compat.py  openai_user.py  phase1_recovery.py  run.py  tau_airline_extension.py  tau_id_extract.py  trace_debugger.py
tests/: test_analyze.py
